add: Pago normal testeado
Falta la cancelacion, la confirmacion y el rechazo contemplar los diferentes casos y estaria todo OK